--- a/package.json
+++ b/package.json
@@ -9,14 +9,15 @@
     "lint": "eslint"
   },
   "dependencies": {
+    "@clerk/nextjs": "^6.36.5",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "convex": "^1.31.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
-    "react": "19.2.0",
-    "react-dom": "19.2.0",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
