--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
   },
   "dependencies": {
     "@clerk/nextjs": "^6.36.5",
+    "@clerk/themes": "^2.4.46",
     "@radix-ui/react-slot": "^1.2.4",
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
@@ -18,6 +19,7 @@
     "next": "16.0.4",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-spinners": "^0.17.0",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
