--- a/package.json
+++ b/package.json
@@ -17,9 +17,11 @@
     "convex": "^1.31.2",
     "lucide-react": "^0.554.0",
     "next": "16.0.4",
+    "next-themes": "^0.4.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-spinners": "^0.17.0",
+    "sonner": "^2.0.7",
     "tailwind-merge": "^3.4.0"
   },
   "devDependencies": {
